@@ -1,4 +1,0 @@
-use inc::Module::Install::DSL 0.91;
-
-all_from      lib/Test/ClassAPI.pm
-requires_from lib/Test/ClassAPI.pm
