@@ -1,0 +1,19 @@
+name                = Test-ClassAPI
+author              = Adam Kennedy <adamk@cpan.org>
+copyright_holder    = Adam Kennedy
+copyright_year      = 2003
+license             = Perl_5
+abstract            = Provides basic first-pass API testing for large class trees
+
+[@Author::ETHER]
+:version = 0.119
+installer = MakeMaker
+Authority.authority = cpan:ADAMK
+-remove = PodWeaver
+-remove = Test::EOL             ; TODO
+-remove = Test::NoTabs          ; TODO
+-remove = Test::PodSpelling     ; TODO
+-remove = PodCoverageTests      ; TODO
+-remove = Test::CleanNamespaces ; TODO
+
+[PodVersion]
