@@ -11,10 +11,10 @@ use Config::Tiny     2.00 ();
 use Class::Inspector 1.12 ();
 use Params::Util     1.00 '_INSTANCE';
 
-use vars qw{$VERSION $CONFIG $SCHEDULE $EXECUTED %IGNORE *DATA};
-BEGIN {
-	$VERSION = '1.07';
+our $VERSION = '1.07';
 
+use vars qw{$CONFIG $SCHEDULE $EXECUTED %IGNORE *DATA};
+BEGIN {
 	# Config starts empty
 	$CONFIG   = undef;
 	$SCHEDULE = undef;
